--- a/Citadel/CitadelEFT/CitadelEFT.csproj
+++ b/Citadel/CitadelEFT/CitadelEFT.csproj
@@ -92,6 +92,10 @@
     <Compile Include="Utils\Render.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>E:\Software\de4dot\Assembly-CSharp.dll</HintPath>
+    </Reference>
     <Reference Include="Comfort, Version=1.0.0.4, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\..\Games\EscapeFromTarkov\EscapeFromTarkov_Data\Managed\Comfort.dll</HintPath>
