--- a/Citadel/CitadelEFT/CitadelEFT.csproj
+++ b/Citadel/CitadelEFT/CitadelEFT.csproj
@@ -87,8 +87,9 @@
     <Compile Include="Options\MiscOptions.cs" />
     <Compile Include="Options\PlayerOptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\ACH.cs" />
+    <Compile Include="Utils\AllocConsoleHandler.cs" />
     <Compile Include="Utils\GameUtils.cs" />
+    <Compile Include="Utils\Log.cs" />
     <Compile Include="Utils\RayCast.cs" />
     <Compile Include="Utils\Render.cs" />
   </ItemGroup>
@@ -96,44 +97,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\chris\Documents\Repositories\infinitycheats\EFTPaks\EFTEsp\WORKSPACE\Assembly-CSharp.dll</HintPath>
-    </Reference>
-    <Reference Include="Comfort">
-      <HintPath>D:\Battlestate Games\EFT (live)\EscapeFromTarkov_Data\Managed\Comfort.dll</HintPath>
-    </Reference>
     <Reference Include="Comfort.Unity">
-      <HintPath>D:\Battlestate Games\EFT (live)\EscapeFromTarkov_Data\Managed\EFT-Logging.dll</HintPath>
-    </Reference>
-    <Reference Include="Comfort.Unity">
-      <HintPath>D:\Battlestate Games\EFT (live)\EscapeFromTarkov_Data\Managed\Comfort.Unity.dll</HintPath>
-    </Reference>
-    <Reference Include="Memory">
-      <HintPath>C:\Users\chris\Documents\Repositories\infinitycheats\EscapeFromTarkov\Memory.dll</HintPath>
-    </Reference>
-    <Reference Include="PlayerEnums">
-      <HintPath>D:\Battlestate Games\EFT (live)\EscapeFromTarkov_Data\Managed\PlayerEnums.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\Games\EscapeFromTarkov\EscapeFromTarkov_Data\Managed\Comfort.Unity.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="UnityEngine">
-      <HintPath>D:\Battlestate Games\EFT (live)\EscapeFromTarkov_Data\Managed\UnityEngine.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.CoreModule">
-      <HintPath>D:\Battlestate Games\EFT (live)\EscapeFromTarkov_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.IMGUIModule">
-      <HintPath>D:\Battlestate Games\EFT (live)\EscapeFromTarkov_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.PhysicsModule">
-      <HintPath>D:\Battlestate Games\EFT (live)\EscapeFromTarkov_Data\Managed\UnityEngine.PhysicsModule.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.TextRenderingModule">
-      <HintPath>D:\Battlestate Games\EFT (live)\EscapeFromTarkov_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.UI">
-      <HintPath>D:\Battlestate Games\EFT (live)\EscapeFromTarkov_Data\Managed\UnityEngine.UI.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.6.0.0\build\Fody.targets" Condition="Exists('..\packages\Fody.6.0.0\build\Fody.targets')" />
